--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recomendador de filmes</title>
+    <title>Movie IA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,120 +11,21 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
   </head>
   <body>
     <section class="card">
       <div class="container">
         <header>
           <img src="/assets/Logo.png" alt="Logo Movie IA" />
-          <button>
+          <button onclick="start()">
             <p>Nova recomedação</p>
             <img src="/assets/icons/Gerar.svg" alt="" />
           </button>
         </header>
 
         <section class="movies">
-          <div class="movie">
-            <div class="title">
-              <span>Barbie</span>
-              <div>
-                <img src="/assets/icons/Star.svg" alt="" />
-                <p>4.9</p>
-              </div>
-            </div>
-
-            <div class="poster">
-              <img src="/assets/poster-1.png" alt="" />
-            </div>
-
-            <div class="info">
-              <div class="duration">
-                <img src="assets/icons/Clock.svg" alt="" />
-
-                <span>1:54:00</span>
-              </div>
-
-              <div class="year">
-                <img src="/assets/icons/CalendarBlank.svg" alt="" />
-
-                <span>2023</span>
-              </div>
-            </div>
-
-            <button>
-              <img src="/assets/icons/Play.svg" alt="Botão de play" />
-
-              <span>Assistir ao trailer</span>
-            </button>
-          </div>
-
-          <div class="movie">
-            <div class="title">
-              <span>Oppenheimer</span>
-              <div>
-                <img src="/assets/icons/Star.svg" alt="" />
-                <p>4.9</p>
-              </div>
-            </div>
-
-            <div class="poster">
-              <img src="/assets/poster-2.png" alt="" />
-            </div>
-
-            <div class="info">
-              <div class="duration">
-                <img src="assets/icons/Clock.svg" alt="" />
-
-                <span>3:00:00</span>
-              </div>
-
-              <div class="year">
-                <img src="/assets/icons/CalendarBlank.svg" alt="" />
-
-                <span>2023</span>
-              </div>
-            </div>
-
-            <button>
-              <img src="/assets/icons/Play.svg" alt="Botão de play" />
-
-              <span>Assistir ao trailer</span>
-            </button>
-          </div>
-
-          <div class="movie">
-            <div class="title">
-              <span>Idiana Jones e o Chamado do Destino</span>
-              <div>
-                <img src="/assets/icons/Star.svg" alt="" />
-                <p>4.9</p>
-              </div>
-            </div>
-
-            <div class="poster">
-              <img src="/assets/poster-3.png" alt="" />
-            </div>
-
-            <div class="info">
-              <div class="duration">
-                <img src="assets/icons/Clock.svg" alt="" />
-
-                <span>2:22:00</span>
-              </div>
-
-              <div class="year">
-                <img src="/assets/icons/CalendarBlank.svg" alt="" />
-
-                <span>2023</span>
-              </div>
-            </div>
-
-            <button>
-              <img src="/assets/icons/Play.svg" alt="Botão de play" />
-
-              <span>Assistir ao trailer</span>
-            </button>
-          </div>
+          
           
         </section>
       </div>
